# pyleecan

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.py
.github/worflows/: python-app.yaml  python-app.yml
.github/workflows/: python-app.yml
Tests/: __init__.py  chocolateyinstall.ps1  femm.nuspec  installation_femm.py
Tests/GUI/Dialog/DMachineSetup/NewMachine/: test_new_machine_Benchmark.py
pyleecan/GUI/Dialog/DMachineSetup/: Ui_DMachineSetup.py
pyleecan/GUI/Dialog/DMachineSetup/DAVDuct/: Ui_DAVDuct.py
pyleecan/GUI/Dialog/DMachineSetup/DBore/: Gen_DBore.py  Ui_DBore.py
pyleecan/GUI/Dialog/DMachineSetup/DNotchTab/: Ui_DNotchTab.py
pyleecan/GUI/Dialog/DMachineSetup/SBar/: Gen_SBar.py  Ui_SBar.py
pyleecan/GUI/Dialog/DMachineSetup/SLamShape/: Gen_SLamShape.py  Ui_SLamShape.py
pyleecan/GUI/Dialog/DMachineSetup/SMHoleMag/: Ui_SMHoleMag.py
pyleecan/GUI/Dialog/DMachineSetup/SMSlot/: Ui_SMSlot.py
pyleecan/GUI/Dialog/DMachineSetup/SMachineDimension/: Ui_SMachineDimension.py
pyleecan/GUI/Dialog/DMachineSetup/SMachineType/: Gen_SMachineType.py  Ui_SMachineType.py
pyleecan/GUI/Dialog/DMatLib/: Ui_DMatLib.py
pyleecan/GUI/Dxf/: Ui_DXF_Hole.py  Ui_DXF_Slot.py  Ui_DXF_Surf.py
pyleecan/GUI/Tools/: SidebarWindow.py
pyleecan/GUI/Tools/GuiOption/: Ui_GuiOption.py
pyleecan/GUI/Tools/WImport/: Ui_WImport.py
pyleecan/GUI/Tools/WPathSelector/: Ui_WPathSelector.py
pyleecan/GUI/Tools/WTableData/: Ui_DTableData.py
pyleecan/Generator/: gui_generator.py  run_generate_GUI.py
(+108 files in other folders)
