[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pyleecan"
version = "1.5.3"
dependencies = [
    "cloudpickle>=1.3.0",
    "ezdxf==0.14.2",
    "h5py>=3.2.1",
    "matplotlib>=3.3.2",
    "meshio>=4.0.15,<=4.4.6",
    "numpy>1.19.5",
    "pandas>=1.0.3",
    "pyfemm>=0.1.3; os_name != 'nt'",
    "PySide2>=5.15.2; python_version < '3.10'",
    "PySide6; python_version >= '3.10'",
    "pyuff>=1.25",
    "pyvista>=0.42.3",
    "SciDataTool>=2.5.0",
    "scipy>=1.4.1",
    "setuptools",
    "vtk>=9.2.6",
    "xlrd>=1.2.0",
    "xlwt>=1.3.0",
    "swat-em@git+https://gitlab.com/CedMrnl/swat-em.git"
]
requires-python = ">=3.8"
authors = [
  {name = "Pyleecan authors", email = "pyleecan@framalistes.org"},
]
description = "Python Library for Electrical Engineering Computational Analysis"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["electrical", "machine", "simulation", "finite element method"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pyleecan.org"
Documentation = "https://pyleecan.org"
Repository = "https://github.com/Eomys/pyleecan"
"Bug Tracker" = "https://github.com/Eomys/pyleecan/issues"

[project.gui-scripts]
pyleecan = "pyleecan:run_GUI"
